--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ API_KEYS.txt
 *.apk
 /release/
 /test/
+/ungoogled-chromium/*
 mini_installer.exe
 thorium_mini_installer.exe
 thorium_SSE2_mini_installer.exe
